--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- !!!!!!!!!! 아래 한줄을 수정하시오 !!!!!!!!!! -->
-    <title>작품제목 - 성이름</title>
+    <title>Mosaic - 김동영</title>
     <!-- !!!!!!!!!! 위 한줄을 수정하시오 !!!!!!!!!! -->
     <link
       rel="stylesheet"
@@ -16,6 +16,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.1/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.1/addons/p5.sound.min.js"></script>
     <!-- !!!!!!!!!! 필요에 따라 아래를 수정하시오 !!!!!!!!!! -->
+    <script src="https://unpkg.com/ml5@1/dist/ml5.js"></script>
+
     <script src="./sketch/main.js" defer></script>
     <!-- !!!!!!!!!! 필요에 따라 위를 수정하시오 !!!!!!!!!! -->
   </head>
@@ -30,11 +32,11 @@
       </div>
       <div class="container">
         <!-- !!!!!!!!!! 아래 한줄을 수정하시오 !!!!!!!!!! -->
-        <h1 class="title">작품제목</h1>
+        <h1 class="title">뭐로 하지...</h1>
         <!-- !!!!!!!!!! 위 한줄을 수정하시오 !!!!!!!!!! -->
         <div class="info">
           <!-- !!!!!!!!!! 아래 한줄을 수정하시오 !!!!!!!!!! -->
-          <div class="info__artist">성이름</div>
+          <div class="info__artist">김동영</div>
           <!-- !!!!!!!!!! 위 한줄을 수정하시오 !!!!!!!!!! -->
           <div class="info__year">2024</div>
         </div>
