--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- !!!!!!!!!! 아래 한줄을 수정하시오 !!!!!!!!!! -->
-    <title>Tension - 김동영</title>
+    <title>Isolation - 김동영</title>
     <!-- !!!!!!!!!! 위 한줄을 수정하시오 !!!!!!!!!! -->
     <link
       rel="stylesheet"
@@ -35,7 +35,7 @@
       </div>
       <div class="container">
         <!-- !!!!!!!!!! 아래 한줄을 수정하시오 !!!!!!!!!! -->
-        <h1 class="title">뭐로 하지...</h1>
+        <h1 class="title">Isolation</h1>
         <!-- !!!!!!!!!! 위 한줄을 수정하시오 !!!!!!!!!! -->
         <div class="info">
           <!-- !!!!!!!!!! 아래 한줄을 수정하시오 !!!!!!!!!! -->
@@ -46,29 +46,16 @@
         <div class="content">
           <!-- !!!!!!!!!! 필요에 따라 아래를 수정하시오 !!!!!!!!!! -->
           <p>
-            법원은 최고법원인 대법원과 각급법원으로 조직된다. 법관은 탄핵 또는
-            금고 이상의 형의 선고에 의하지 아니하고는 파면되지 아니하며,
-            징계처분에 의하지 아니하고는 정직·감봉 기타 불리한 처분을 받지
-            아니한다. 국회의원이 회기전에 체포 또는 구금된 때에는 현행범인이
-            아닌 한 국회의 요구가 있으면 회기중 석방된다.
+            도형사이를 자유롭게 돌아다닐 수 있지만 어떤 개체와도 접촉할 수
+            없도록 하였습니다.
+            <br />
+            기존의 집단은 모두 같은 색을 띄며 상하좌우로 강력하게 이어져 있는
+            형태입니다.<br />
+            외부에서 온 개체에게 쉽게 물들지만 동시에 기존의 연결고리가 끊어지는
+            것을 매우 두려워 합니다.<br />결국 새로운 개체는 융화되지 못하고
+            빠져나오며, 모든 것이 제자리로 돌아갑니다.
           </p>
-          <p>
-            정당은 법률이 정하는 바에 의하여 국가의 보호를 받으며, 국가는 법률이
-            정하는 바에 의하여 정당운영에 필요한 자금을 보조할 수 있다. 모든
-            국민의 재산권은 보장된다. 그 내용과 한계는 법률로 정한다. 대통령으로
-            선거될 수 있는 자는 국회의원의 피선거권이 있고 선거일 현재 40세에
-            달하여야 한다.
-          </p>
-          <p>
-            평화통일정책의 수립에 관한 대통령의 자문에 응하기 위하여
-            민주평화통일자문회의를 둘 수 있다. 위원은 탄핵 또는 금고 이상의 형의
-            선고에 의하지 아니하고는 파면되지 아니한다. 대한민국은 통일을
-            지향하며, 자유민주적 기본질서에 입각한 평화적 통일 정책을 수립하고
-            이를 추진한다. 이 헌법은 1988년 2월 25일부터 시행한다. 다만, 이
-            헌법을 시행하기 위하여 필요한 법률의 제정·개정과 이 헌법에 의한
-            대통령 및 국회의원의 선거 기타 이 헌법시행에 관한 준비는 이 헌법시행
-            전에 할 수 있다.
-          </p>
+
           <!-- !!!!!!!!!! 필요에 따라 위를 수정하시오 !!!!!!!!!! -->
         </div>
         <p class="disclaimer">
@@ -77,37 +64,37 @@
         <ol class="references">
           <!-- !!!!!!!!!! 필요에 따라 아래를 수정하시오 !!!!!!!!!! -->
           <li>
-            [작가이름], [작가성]. <span>작품제목.</span> [플랫폼이름],
-            [공개년도]. 최종접근일 2024.12.09.
-            <a href="" target="_blank">URL</a>
-          </li>
-          <li>
-            Chen, Zaron. <span>Hilbert.</span> p5.js, 2024. 최종접근일
-            2024.12.09.
-            <a href="https://p5js.org/sketches/2174234/" target="_blank"
-              >https://p5js.org/sketches/2174234/</a
+            Boeykens, Stefan. <span>Simple Attractor.</span> openprocessing.org,
+            2011. 최종접근일 2024.12.14.
+            <a href="https://openprocessing.org/sketch/27004" target="_blank"
+              >https://openprocessing.org/sketch/27004</a
             >
           </li>
           <li>
-            [작가아이디]. <span>작품제목.</span> [플랫폼이름], [공개년도].
-            최종접근일 2024.12.09.
-            <a href="" target="_blank">URL</a>
+            slicar2640. <span>Force-Driven Graph.</span> openprocessing.org,
+            2024. 최종접근일 2024.12.15.
+            <a href="https://openprocessing.org/sketch/2468326" target="_blank"
+              >https://openprocessing.org/sketch/2468326</a
+            >
           </li>
           <li>
-            newyellow. <span>Generative Succulents.</span> p5.js, 2023.
-            최종접근일 2024.12.09.
-            <a href="" target="_blank">https://p5js.org/sketches/1957050/</a>
+            eastcott, spencer. <span>Chroma Hairs.</span> openprocessing.org,
+            2021. 최종접근일 2024.12.14.
+            <a href="https://openprocessing.org/sketch/1198049" target="_blank"
+              >https://openprocessing.org/sketch/1198049</a
+            >
           </li>
           <li>
-            [게시자이름], [게시자성]. <span>기사제목.</span> [플랫폼이름],
-            [발행일]. 최종접근일 2024.12.09
-            <a href="" target="_blank">URL</a>
-          </li>
-          <li>
-            <span>The Superb Generative Gradient Art by Martin Naumann.</span>
-            Design You Trust. 최종접근일 2024.12.09
-            <a href="" target="_blank"
-              >https://designyoutrust.com/2024/08/the-superb-generative-gradient-art-by-martin-naumann/</a
+            Patt, Vira.
+            <span
+              >p5.js Coding Tutorial | Interactive Bridge with Bouncing Balls
+              (matter.js + ml5.js).</span
+            >
+            YouTube, 2024. 최종접근일 2024.12.14.
+            <a
+              href="https://www.youtube.com/watch?v=K7b5MEhPCuo"
+              target="_blank"
+              >https://www.youtube.com/watch?v=K7b5MEhPCuo</a
             >
           </li>
           <!-- !!!!!!!!!! 필요에 따라 위를 수정하시오 !!!!!!!!!! -->
