--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             형태입니다.<br />
             외부에서 온 개체에게 쉽게 물들지만 동시에 기존의 연결고리가 끊어지는
             것을 매우 두려워 합니다.<br />결국 새로운 개체는 융화되지 못하고
-            빠져나오며, 모든 것이 제자리로 돌아갑니다.
+            빠져나오며, 원들은 제 위치로 돌아갑니다.
           </p>
 
           <!-- !!!!!!!!!! 필요에 따라 위를 수정하시오 !!!!!!!!!! -->
