Final_Add_References

--- a/index.html
+++ b/index.html
@@ -64,6 +64,39 @@
         <ol class="references">
           <!-- !!!!!!!!!! 필요에 따라 아래를 수정하시오 !!!!!!!!!! -->
           <li>
+            Daniel, Shiffman.
+            <span>5.21: Matter.js: Mouse Constraints - The Nature of Code</span>
+            Youtube, 2023. 최종접근일 2024.12.14.
+            <a
+              href="https://www.youtube.com/watch?v=W-ou_sVlTWk"
+              target="_blank"
+              >https://www.youtube.com/watch?v=W-ou_sVlTWk</a
+            >
+          </li>
+          <li>
+            Patt, Vira.
+            <span>p5.js Coding Tutorial | Introduction to matter.js </span>
+            Youtube, 2024. 최종접근일 2024.12.14.
+            <a
+              href="https://www.youtube.com/watch?v=cLXNxn5N-2Y"
+              target="_blank"
+              >https://www.youtube.com/watch?v=cLXNxn5N-2Y</a
+            >
+          </li>
+          <li>
+            Patt, Vira.
+            <span
+              >p5.js Coding Tutorial | Interactive Bridge with Bouncing Balls
+              (matter.js + ml5.js)</span
+            >
+            Youtube, 2024. 최종접근일 2024.12.14.
+            <a
+              href="https://www.youtube.com/watch?v=K7b5MEhPCuo"
+              target="_blank"
+              >https://www.youtube.com/watch?v=K7b5MEhPCuo</a
+            >
+          </li>
+          <li>
             Boeykens, Stefan. <span>Simple Attractor.</span> openprocessing.org,
             2011. 최종접근일 2024.12.14.
             <a href="https://openprocessing.org/sketch/27004" target="_blank"
@@ -82,19 +115,6 @@
             2021. 최종접근일 2024.12.14.
             <a href="https://openprocessing.org/sketch/1198049" target="_blank"
               >https://openprocessing.org/sketch/1198049</a
-            >
-          </li>
-          <li>
-            Patt, Vira.
-            <span
-              >p5.js Coding Tutorial | Interactive Bridge with Bouncing Balls
-              (matter.js + ml5.js).</span
-            >
-            YouTube, 2024. 최종접근일 2024.12.14.
-            <a
-              href="https://www.youtube.com/watch?v=K7b5MEhPCuo"
-              target="_blank"
-              >https://www.youtube.com/watch?v=K7b5MEhPCuo</a
             >
           </li>
           <!-- !!!!!!!!!! 필요에 따라 위를 수정하시오 !!!!!!!!!! -->
